styles/shell.css
:root {
	--corner-radius-panel: 10px;
	--corner-radius-card: 8px;
	--corner-radius-tile: 6px;
	
	--color-bg-panel: rgba(255, 255, 255, 0.8);
	--color-bg-card: white;
	--color-bg-tile: rgba(0, 0, 0, 0.1);
	--color-on-bg: black;
	--color-on-accent: white;
	--color-accent: #6699ff;
	
	--system-bar-height-large: 40px;
	--system-bar-height-small: 24px;
	--app-tile-size-small: 48px;
	--app-tile-size-medium: 100px;
	--app-tile-gap: 4px;
	--qs-tile-height: 72px;
	
	--mdc-shape-small: var(--corner-radius-tile);
}
@media (prefers-color-scheme: dark) {
	:root {
		--color-accent: #6699ff;
		--color-bg-card: white;
		--color-bg-panel: rgba(0, 0, 0, 0.8);
		--color-bg-tile: rgba(255, 255, 255, 0.2);
		--color-on-bg: white;
		--color-on-accent: black;
		
		--mdc-theme-text-primary-on-background: rgba(255, 255, 255, 0.87);
		--mdc-ripple-color: #fff;
	}
}

body {
	/* Default FlashOS background image :) */
	background: linear-gradient(120deg, #01243A, #015287 25%, #014776 40%, #015287 60%, #000000);
	background-attachment: fixed;
	
	font-family: Roboto, Helvetica, 'Segoe UI', Arial, sans-serif;
}

ideal-system-bar {
	position: fixed;
	left: 0;
	right: 0;
	top: 0;
	height: var(--system-bar-height-small);
	
	display: flex;
	align-items: center;
	overflow: hidden;
	
	z-index: 999;
}
	ideal-system-bar mwc-icon-button {
		margin: -4px -2px;
	}
		ideal-system-bar mwc-icon-button:first-child {
			margin-left: -8px;
			--mdc-icon-size: 16px;
		}
	ideal-system-bar mwc-button {
		--mdc-theme-primary: currentColor;
	}
@media (min-width: 600px) {
	ideal-system-bar {
		height: var(--system-bar-height-large);
	}
	ideal-system-bar mwc-icon-button:first-child {
		margin-left: -2px;
		--mdc-icon-size: 24px;
	}
}

ideal-system-icon-area {
	margin-left: auto;
	margin-right: 2px;
	
	--mdc-icon-size: 16px;
	
	z-index: 1;
}

ideal-launcher-pane,
ideal-action-pane {
	display: block;
	position: fixed;
	top: var(--system-bar-height-small);
	width: 100%;
	max-height: 100%;
	
	border-radius: 0 0 var(--corner-radius-panel) var(--corner-radius-panel);
	background-color: var(--background-color-panel);
	
	transform: translateY(-100%) translateY(calc(-1 * var(--system-bar-height-small)));
	opacity: 0;
	transition-property: transform, opacity;
	transition-duration: 0.25s;
	
	outline: 0 none;
	z-index: -1;
}
	ideal-launcher-pane[open],
	ideal-action-pane[open] {
		transform: none;
		opacity: 1;
	}
	ideal-launcher-pane h1,
	ideal-action-pane h1 {
		font-size: 1.25rem;
		font-weight: 500;
	}
@media (min-width: 600px) {
	ideal-launcher-pane,
	ideal-action-pane {
		width: auto;
		top: var(--system-bar-height-large);
		transform: translateY(-100%) translateY(calc(-1 * var(--system-bar-height-large)));
	}
}

ideal-launcher-pane {
	left: 0;
}
/* TODO: reimplement this animation in the now-contained components
	ideal-launcher-pane ideal-app-tile {
		transform: translateY(-4em) scale(0.85);
		transition: transform 0.4s;
	}
		ideal-launcher-pane[open] ideal-app-tile {
			transform: none;
		}
*/

@media (min-width: 600px) {
	ideal-launcher-pane {
		left: 4px;
	}
}

ideal-action-pane {
	right: 0;
}
@media (min-width: 600px) {
	ideal-action-pane {
		right: 4px;
		width: 356px;
	}
}

ideal-window {
	z-index: -1;
}

